--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,42 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Public Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.navbar {
+  background-color: #22668a;
+}
+
+.category-aktif {
+  background-color: #22668a;
+  color: #fff;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+.overflow-auto::-webkit-scrollbar {
+  display: none;
+}
+
+.btn-primary {
+  background-color: #22668a;
+}
+
+table tr {
+  font-size: 16px;
+}
+
+@media only screen and (max-height : 1000px) {
+  .hasil {
+    height: 650px;
+  }
+  .menu{
+    height: 800px;
+  }
 }
